--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,7 +3,12 @@
         <app-shopping-edit></app-shopping-edit>
         <hr>
         <ul class="list-group">
-            <a class="list-group-item" style="cursor: pointer;"></a>
+            <a
+             class="list-group-item"
+             style="cursor: pointer;"
+             *ngFor="let ingresdient of ingredients">
+             {{ ingresdient.name }} ({{ ingresdient.amount }})
+            </a>
         </ul>
     </div>
 </div>
