--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -6,8 +6,8 @@
             <a
              class="list-group-item"
              style="cursor: pointer;"
-             *ngFor="let ingresdient of ingredients">
-             {{ ingresdient.name }} ({{ ingresdient.amount }})
+             *ngFor="let ingredient of ingredients">
+             {{ ingredient.name }} ({{ ingredient.amount }})
             </a>
         </ul>
     </div>
