--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">My Recipes</a></li>
-                <li><a href="#">My Shopping List</a></li>
+                <li><a href="#" (click)="onSelect('recipe')">My Recipes</a></li>
+                <li><a href="#" (click)="onSelect('shopping-list')">My Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
